# Parafoil_sim

./: CMakeLists.txt  README.md
include/: simulation.hpp  six_dof_parafoil.hpp  utility.hpp  vehicle_dynamics.hpp
plot/: plot.py
src/: sim.cpp  simulation.cpp  six_dof_parafoil.cpp  utility.cpp
